--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,71 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
+.cell,
+.number,
+.header > div {
+  cursor: pointer;
+}
+
+body {
+  height: 100vh;
+}
+
+#app {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+.header {
+  display: flex;
+  justify-content: space-around;
+}
+
+.content {
+  display: flex;
+  justify-content: center;
+}
+
+.footer {
+  display: flex;
+  flex-direction: column;
+}
+
+.numbers {
+  display: flex;
+  justify-content: space-around;
+}
+
+.number {
+  border: 1px solid red;
+  padding: 2vmin;
+  border-radius: 1vmin;
+}
+
+.box {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  width: 21vmin;
+  height: 21vmin;
+  gap: 0.5vmin;
+}
+
+.cell {
+  width: 7vmin;
+  height: 7vmin;
+  border: 1px solid red;
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: repeat(3, 22vmin);
+  grid-template-rows: repeat(3, 22vmin);
+  column-gap: 1vmin;
+  row-gap: 1vmin;
+}
