--- a/src/style.css
+++ b/src/style.css
@@ -20,6 +20,12 @@
   font-size: calc(var(--cell-height) / 2);
 }
 
+.bmc {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+}
+
 :root {
   --bg: #7c7c7c;
   --bg-white: #ffffff;
